add reeborg.ca/docs/en manual link

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <img alt="life-size Reeborg" src="src/images/reeborg_judkis.jpg" /><br>
 <em>Photo courtesy of A. Judkis.</em></div>
   <p><a href="reeborg.html">立寶的世界</a> 希望能幫助初學者學習 Python 與 Javascript 程式語言</p>
-  <p>可以先看一下 <a href="docs/en/">手冊</a>, 其中包括程式導引與說明.</p>
+  <p>可以先看一下 <a href="http://reeborg.ca/docs/en/">手冊</a>, 其中包括程式導引與說明.</p>
 
 
   <h3>教學影片</h3>
